--- a/SentiStrength/.classpath
+++ b/SentiStrength/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="SentiStrengthCom.jar"/>
+	<classpathentry exported="true" kind="lib" path="SentiStrengthCom.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/jacob/Development/Undergrad_Research/SentiStrength/SentiStrengthCom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
