--- a/SentiTool/.classpath
+++ b/SentiTool/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/SentiStrengthCom.jar"/>
 	<classpathentry kind="lib" path="lib/opencsv-3.8.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang3-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.21-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
